# INST414-Capstone

./: Makefile  README.md  Untitled.ipynb  dataset_log.txt  inst414-capstone.code-workspace  localdata.py  project.py  pyproject.toml  spotifyproject.py  travel_vlogs_2017_2019.csv  travel_vlogs_2017_2019_v2.csv  travel_vlogs_2017_2019_with_country-1.csv
docs/: mkdocs.yml
docs/docs/: index.md
inst414-capstone/: project.py
inst414-capstone/docs/docs/: index.md
inst414_capstone/: config.py  dataset_log.txt  travel_vlogs_2017_2019.csv
inst414_root/: .gitignore  Makefile  README.md  pyproject.toml
inst414_root/docs/: mkdocs.yml
inst414_root/inst414_capstone/: __init__.py  dataset.py  features.py  plots.py
inst414_root/inst414_capstone/modeling/: predict.py  train.py
