[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "inst414_capstone"
version = "0.0.1"
description = "Trends in media engagement between short and long form content."
authors = [
  { name = "Sudenur Yavuz" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["inst414_capstone"]
include = ["pyproject.toml", "inst414_capstone/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["inst414_capstone"]
force-sort-within-sections = true

